<resources>

    <!--App strings-->
    <string name="app_name">Pathfinder Secret Roller</string>
    <string name="splash_title">Pathfinder Secret\nRoller</string>

    <!--Activity strings-->
    <string name="title_activity_main">Secret Roller</string>
    <string name="title_activity_skills">Skills</string>
    <string name="title_activity_players">Players</string>
    <string name="title_activity_skill">Skill</string>
    <string name="title_activity_player">Player</string>

    <!--Menu strings-->
    <string name="menu_title_manage_players">Manage Players</string>
    <string name="menu_title_add_player">Add Player</string>
    <string name="menu_title_save_player">Save Player</string>
    <string name="menu_title_save_skill">Save Skill</string>
    <string name="menu_title_remove_player">Remove Player</string>
    <string name="menu_title_delete_skill">Delete Skill</string>
    <string name="menu_title_add_skill">Add Skill</string>
    <string name="menu_title_manage_skills">Manage Skills</string>
    <string name="menu_title_reroll">Reroll</string>
    <string name="menu_title_about">About</string>

    <!--Default skills-->
    <string name="default_skill_perception">Perception</string>
    <string name="default_skill_arcana">Arcana</string>
    <string name="default_skill_crafting">Crafting</string>
    <string name="default_skill_deception">Deception</string>
    <string name="default_skill_nature">Nature</string>
    <string name="default_skill_occultism">Occultism</string>
    <string name="default_skill_religion">Religion</string>
    <string name="default_skill_society">Society</string>
    <string name="default_skill_stealth">Stealth</string>
    <string name="default_skill_lore">Lore</string>

    <!--Dialog-->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_about_info">To learn more about the app, and its developer, please visit the website.</string>
    <string name="dialog_about_info_title">About</string>
    <string name="dialog_about_ok">Go to website</string>
    <string name="dialog_delete_title_skill">Delete skill?</string>
    <string name="dialog_delete_message_skill">Are you sure you want to delete this skill? There is no recovery. It will also remove it from all existing players.</string>
    <string name="dialog_delete_title_player">Delete player?</string>
    <string name="dialog_delete_message_player">Are you sure you want to delete this player? There is no recovery. It will also permanently remove all skill information.</string>
    <string name="dialog_about_confirm_deletion">Confirm deletion</string>

    <!--Buttons-->
    <string name="button_edit">Edit</string>
    <string name="skill_roll_party">Roll for party</string>
    <string name="pick_dc_button">Pick DC</string>
    <string name="calculate_dc_button">Calculate</string>

    <!--Errors-->
    <string name="error_name_not_unique">Name was not saved: Name was not unique or was empty</string>

    <!--Labels-->
    <string name="dc_text_label">Input DC number to check for degrees of success</string>

    <!--Results-->
    <string name="result_natural_one">Critical failure (natural 1)</string>
    <string name="result_natural_twenty">Critical success (natural 20)</string>
    <string name="result_critical_success">Critical success</string>
    <string name="result_success">Success</string>
    <string name="result_failed">Failed</string>
    <string name="result_critical_fail">Critical fail</string>
    <string name="result_label_proficiency">Proficiency:\u0020</string>
    <string name="result_label_modifier">Mod: +</string>
    <string name="result_label_dice_roll">Dice roll:\u0020</string>
    <string name="result_label_check_result">Check result:\u0020</string>
    <string name="result_label_outcome">Outcome:\u0020</string>

    <!--Dialog DC picker-->
    <string name="dc_picker_dialog_title">Pick a level and difficulty</string>
    <string name="dc_picker_label_level">Level</string>
    <string name="dc_picker_label_difficulty">Difficulty</string>
    <string name="dc_picker_label_result">Result:\u0020</string>
    <string name="dc_picker_label_easy">Easy</string>
    <string name="dc_picker_label_medium">Medium</string>
    <string name="dc_picker_label_hard">Hard</string>
    <string name="dc_picker_label_incredible">Incredible</string>
    <string name="dc_picker_label_ultimate">Ultimate</string>

    <!--Skill proficiencies-->
    <string name="proficiency_untrained">Untrained</string>
    <string name="proficiency_trained">Trained</string>
    <string name="proficiency_expert">Expert</string>
    <string name="proficiency_master">Master</string>
    <string name="proficiency_legendary">Legendary</string>

</resources>