<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rekijan.pathfindersecretroller.MainActivity">
    <item
        android:id="@+id/menu_action_manage_players"
        android:orderInCategory="1"
        android:title="@string/menu_title_manage_players"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_action_manage_skills"
        android:orderInCategory="2"
        android:title="@string/menu_title_manage_skills"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_action_about"
        android:orderInCategory="3"
        android:title="@string/menu_title_about"
        app:showAsAction="ifRoom" />
</menu>